--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,17 +5,18 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.0",
-    "@monaco-editor/react": "4.7.0",
-    "axios": "1.7.9"
+    "@monaco-editor/react": "*",
+    "axios": "*",
+    "react": "*",
+    "react-dom": "*",
+    "react-scripts": "*"
   },
   "devDependencies": {
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
-    "loader-utils": "3.2.1",
-    "typescript": "5.7.2"
+    "@types/react": "*",
+    "@types/react-dom": "*",
+    "eslint-config-react-app": "^7.0.1",
+    "loader-utils": "*",
+    "typescript": "*"
   },
   "scripts": {
     "start": "react-scripts start",
